--- a/ruuvi_examples/ble_app_beacon/ruuvitag_b3/s132/armgcc/Makefile
+++ b/ruuvi_examples/ble_app_beacon/ruuvitag_b3/s132/armgcc/Makefile
@@ -2,7 +2,7 @@ PROJECT_NAME     := ble_app_beacon_ruuvitag_b3_s132
 TARGETS          := nrf52832_xxaa
 OUTPUT_DIRECTORY := _build
 
-SDK_ROOT := ../../../../../nRF5_SDK_12.2.0_f012efa
+SDK_ROOT := ../../../../../nRF5_SDK_12.3.0_d7731ad
 PROJ_DIR := ../../..
 
 $(OUTPUT_DIRECTORY)/nrf52832_xxaa.out: \
