Add IOTA MAM test

--- a/ruuvi_examples/test_drivers/ruuvitag_b5/s132/armgcc/Makefile
+++ b/ruuvi_examples/test_drivers/ruuvitag_b5/s132/armgcc/Makefile
@@ -193,7 +193,8 @@ INC_FOLDERS += \
 
 # Libraries common to all targets
 LIB_FILES += \
-
+  ../../../libiota_mam_bindings.a
+  
 # C flags common to all targets
 CFLAGS += -DNRF52
 CFLAGS += -DBOARD_CUSTOM
