--- a/ruuvi_examples/test_drivers/ruuvitag_b5/s132/armgcc/Makefile
+++ b/ruuvi_examples/test_drivers/ruuvitag_b5/s132/armgcc/Makefile
@@ -76,6 +76,7 @@ SRC_FILES += \
   $(PROJ_DIR)/../../drivers/nrf_nordic_pininterrupt/pin_interrupt.c \
   $(PROJ_DIR)/../../drivers/init/init.c \
   $(PROJ_DIR)/../../drivers/lis2dh12/lis2dh12.c \
+  $(PROJ_DIR)/../../drivers/lis2dh12/lis2dh12_acceleration_handler.c \
   $(PROJ_DIR)/../../drivers/rng/rng.c \
   $(PROJ_DIR)/../../drivers/rtc/rtc.c \
   $(PROJ_DIR)/../../drivers/spi/spi.c \
